# Silixel

./: CMakeLists.txt  LICENSE  README.md  synth.sh  synth_bram.sh
designs/: Makefile  mul.v  silice_blaze.v  silice_blinky.v  silice_div.v  silice_icev_leds.v  silice_mulpip.v  silice_vga_demo.v  silice_vga_demo_flyover.v  silice_vga_test.v  simple.v  test1.si  test2.si  test3.si
src/: CMakeLists.txt  analyze.cc  analyze.h  blif.cc  blif.h  read.cc  read.h  sh_clear.cs  sh_init.cs  sh_outports.cs  sh_posedge.cs  sh_simul.cs  sh_visu.fp  sh_visu.vp  silixel.cc  silixel_cpu.cc  simul.cc  simul.h  simul_cpu.cc  simul_cpu.h  simul_gpu.cc  simul_gpu.h  uintX.h  wasi.cc
src/fstapi/: CMakeLists.txt  fstapi.c
synth/: synth.yosys  synth_bram.yosys
